feat: 인증 로직 강화 및 저장소 구조 개선
- 로그인 시 password 검증 로직 추가
- BinaryContentStorage 도입: 파일 저장을 DB에서 분리
- Repository 컬럼명 DB에 맞게 매핑 수정
- MessageController.getMessagesByChannel(): 기본 size=50, 내림차순 정렬 적용