@@ -19,8 +19,12 @@ import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.MessageService;
+import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import java.io.IOException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -37,6 +41,8 @@ public class BasicMessageService implements MessageService {
   private final UserRepository userRepository;
   private final BinaryContentRepository binaryContentRepository;
   private final MultipartFileMapper multipartFileMapper;
+  private final BinaryContentStorage binaryContentStorage;
+  private final MessageMapper messageMapper;
 
   @Override
   @Transactional
@@ -53,6 +59,11 @@ public class BasicMessageService implements MessageService {
       for (MultipartFile attachment : attachments) {
         BinaryContent binaryContent = multipartFileMapper.toEntity(attachment);
         BinaryContent saved = binaryContentRepository.save(binaryContent);
+        try {
+          binaryContentStorage.put(saved.getId(), attachment.getBytes());
+        } catch (IOException e) {
+          throw new RuntimeException("Failed to read bytes from attachment", e);
+        }
         binaryContents.add(saved); // 저장된 객체 사용
       }
     }
@@ -76,12 +87,21 @@ public class BasicMessageService implements MessageService {
 
   @Override
   @Transactional(readOnly = true)
-  public List<Message> findAllByChannelId(UUID channelId) {
-    return messageRepository.findAll()
-        .stream()
-        .filter(message -> channelId.equals(message.getChannel().getId())) // Null-safe: 왼쪽 기준 비교
-        .collect(Collectors.toList());
+  public Slice<MessageResponse> findAllByChannelId(UUID channelId, Pageable pageable) {
+    Slice<Message> messages = messageRepository.findByChannelIdOrderByCreatedAtDesc(channelId,
+        pageable);
+    List<MessageResponse> dtoList = messages.stream()
+        .map(messageMapper::toResponse)
+        .toList();
+
+    return new SliceImpl<>(dtoList, pageable, messages.hasNext());
   }
+//  public List<Message> findAllByChannelId(UUID channelId) {
+//    return messageRepository.findAll()
+//        .stream()
+//        .filter(message -> channelId.equals(message.getChannel().getId())) // Null-safe: 왼쪽 기준 비교
+//        .collect(Collectors.toList());
+//  }
 
   @Override
   @Transactional
